# Scenesmith

./: .gitignore  main.py  pyproject.toml
configurations/ceiling_agent/: base_ceiling_agent.yaml
configurations/furniture_agent/: base_furniture_agent.yaml
configurations/manipuland_agent/: base_manipuland_agent.yaml
configurations/wall_agent/: base_wall_agent.yaml
docs/: CODEX_VLM_REPLACEMENT_EXPERIMENT.md
local_setup/: README_SCENESMITH_QWEN_HSSD.md  RECONNECT_RUNBOOK.md  check_deps.sh  compute_node_env.sh  drake_view_scene.py  merge_scene_to_glb.py  run_house_hssd.sh  run_hssd_furniture.sh  run_measured.sh  setup_env.sh  setup_env_local.sh  setup_env_openai.sh
scenesmith/agent_utils/: base_stateful_agent.py  (+3 more)
scripts/: codex_vlm_replacement_smoke.py  download_ambientcg.py
tools/codex_benchmark/: .gitignore  README.md  __init__.py  benchmark.py  cache.py  checkpoint.py  codex_runner.py  config.py  config.yaml  logger.py  pyproject.toml  report.py  requirements.txt  statistics.py
tools/codex_benchmark/docs/: REAL_BENCHMARK_RESULTS.md  USAGE_GUARDED_COVERAGE_RESULTS.md
tools/codex_benchmark/manifests/: scenesmith_vlm_images.json
tools/codex_benchmark/reports/: calls.csv  final_report.md  summary.csv
tools/codex_benchmark/schemas/: image_result.schema.json  structured_output.schema.json  vlm_result.schema.json
tools/codex_benchmark/scripts/: export_run_summary.py  run_real_100.ps1  run_real_small.ps1  run_smoke.ps1
tools/codex_benchmark/tests/: test_checkpoint_statistics.py  test_config_cache.py  test_measurement_integrity.py  test_validation.py
(+6 files in other folders)
